<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@id/blankFragment">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.eventapp.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_browse"
            android:name="com.example.eventapp.ui.browse.BrowseFragment"
            android:label="@string/title_browse"
            tools:layout="@layout/fragment_browse"/>

    <fragment
            android:id="@+id/navigation_saved"
            android:name="com.example.eventapp.ui.saved.SavedFragment"
            android:label="@string/title_saved"
            tools:layout="@layout/fragment_saved"/>
    <fragment android:id="@+id/blankFragment" android:name="com.example.eventapp.BlankFragment"
              android:label="fragment_blank" tools:layout="@layout/fragment_blank"/>
</navigation>