<!-- res/layout/list_item.xml -->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

    <ImageView
            android:id="@+id/itemImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_desc"/>

    <TextView
            android:id="@+id/eventName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="4dp"
            android:paddingLeft="4dp"/>

    <Button
            android:id="@+id/webButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/open_in_browser"
            android:contentDescription="@string/open_in_web_desc"/>

    <Button
            android:id="@+id/saveButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/heart_shape"
            android:contentDescription="@string/save_button_desc"/>


</LinearLayout>